gccida/c2/ereal_from_uint
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1393:82: error: must use 'enum' tag to refer to type 'machine_mode'
void  ereal_from_uint( realvaluetype *d, unsigned __int64 i, unsigned __int64 j, machine_mode mode) 
                                                                                 ^
                                                                                 enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1412:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1415:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1415:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1425:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1425:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1455:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1455:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1476:12: error: expected expression
*( _OWORD *)x = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/real.c:1476:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x = 0LL; 
   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ereal_from_uint/src/obj/real.o] Error 1
